# magma

./: Cargo.toml  README.md  ipc.xml  log.txt
.github/workflows/: build.yml
magma-ipc/src/: main.rs
magma-ipc/src/ipc/: mod.rs  workspaces.rs
src/: input.rs  main.rs  state.rs  surface.rs
src/backends/: udev.rs  winit.rs
src/config/: mod.rs  types.rs
src/handlers/: compositor.rs  drm.rs  input.rs  mod.rs  udev.rs  xdg_shell.rs
src/ipc/: mod.rs  workspaces.rs
src/utils/: binarytree.rs  focus.rs  mod.rs  tiling.rs  workspace.rs  workspaces.rs
src/utils/protocols/: mod.rs
src/utils/protocols/screencopy/: frame.rs  mod.rs
