[package]
name = "magma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
xdg = "^2.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
smithay-drm-extras = { git = "https://github.com/PolyMeilex/smithay.git", branch = "null-byte-manufacturer"}

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "backend_gbm",
    "backend_udev",
    "backend_libinput",
    "use_system_lib",
]
